Correccions Helium sense WF
- Completar importació i exportació
- Generació de plantilla des de la modal de nou document amb codi.
- Canvi literal "Generar només des de tasca" per "No permetre generar
des de la gestió de documents"

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -1085,6 +1085,11 @@ exportar.validacio.consulta.variable=La consulta "{0}" necessita la variable "{1
 exportar.validacio.consulta.variable.definicioProces.versio=La consulta "{0}" necessita la variable "{1}" de la definició de procés "{2} v.{3}"
 exportar.validacio.consulta.variable.definicioProces=La consulta "{0}" necessita la variable "{1}" de la definició de procés "{2}"
 exportar.validacio.document.variable=El document "{0}" necessita la variable "{1}" pel camp de la data
+
+exportar.validacio.estat.accio.entrada=L''estat "{0} - {1}" necessita l'' acció d''entrada amb codi "{2}"
+exportar.validacio.estat.accio.sortida=L''estat "{0} - {1}" necessita l'' acció de sortida amb codi "{2}"
+exportar.validacio.estat.accio.llistat=L''estat "{0} - {1}" necessita les següents accions d''entrada o sortida: {2}
+
 exportar.validacio.tasca.variable=La tasca "{0}" necessita la variable "{1}"
 exportar.validacio.tasca.variable.expedientTipus=La tasca "{0}" necessita la variable "{1}" definida dins del tipus d''expedient
 exportar.validacio.tasca.document=La tasca "{0}" necessita el document "{1}"
@@ -1368,7 +1373,7 @@ expedient.tipus.document.form.camp.notificable=Notificable
 expedient.tipus.document.form.camp.arxiu=Arxiu
 expedient.tipus.document.form.camp.codi_doc=Codi del document pel portasignatures
 expedient.tipus.document.form.camp.adj_auto=Adjuntar automàticament al generar
-expedient.tipus.document.form.camp.generar.nomes.tasca=Generar només des de tasca
+expedient.tipus.document.form.camp.generar.nomes.tasca=No permetre generar des de la gestió de documents
 expedient.tipus.document.form.camp.generar.nomes.tasca.info=Flag per permetre generar el document tipus plantilla des de la tasca, no es podrà generar des de la gestió de documents
 expedient.tipus.document.form.camp.camp_data=Camp de la data
 expedient.tipus.document.form.camp.camp_data.buit=Seleccioni un camp
