Correccions 3.2.116 #1648 Publicació d'avisos

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -33,6 +33,7 @@ error.permis.disseny.entorn=No disposa de permisos per dissenyar l'entorn
 error.permis.administracio.entorn=No disposa de permisos per administrar l'entorn
 error.signatura=Error durant la signatura: {0}
 error.permis.disseny.avis=No disposa de permisos per dissenyar l'avís
+error.validacio.avis.dataInici.menor.dataFi=La data inicial ha de ser menor que la data final
 
 entorn.llistat.titol=Entorns
 entorn.llistat.columna.codi=Codi
