--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -2008,10 +2008,15 @@ anotacio.llistat.filtre.camp.dataFinal=Data final
 anotacio.llistat.filtre.camp.expedientTipus=Expedient tipus
 anotacio.llistat.filtre.camp.estat=Estat
 anotacio.llistat.reintentar.consulta=Reintentar consulta
+anotacio.llistat.reintentar.consulta.title=Posa els intents a 0 de les anotacions que estiguin comunicades i no s'hagin pogut consultar durant els intents establerts.
 anotacio.llistat.reintentar.processament=Reintentar processament
-anotacio.llistat.reintentar.processament.nomes.annexos=Reintentar traspàs annexos
+anotacio.llistat.reintentar.processament.title=Torna a processar les anotacions amb error de processament. Les anotacions pendents o rebutjades es torne a avaluar si hi ha cap tipus d'expedient que es pugui associar i en cas de tenir processament automàtic es duu a terme.
 anotacio.llistat.reintentar.mapeig=Reintentar mapeig
+anotacio.llistat.reintentar.mapeig.title=En el cas que l'anotació estigui associada a un expedient i en el tipus d'expedient estigui configurat el mapeig amb Sistra2 es torna a processar el mapeig de variables i documents.
+anotacio.llistat.reintentar.processament.nomes.annexos=Reintentar traspàs annexos
+anotacio.llistat.reintentar.processament.nomes.annexos.title=Torna a intentar el traspàs a l'Arxiu dels annexos de l'anotació que hagin pogut quedar a l'expedient d'origen de l'anotació de Distribucio cap a la carpeta de l'expedient de l'Arxiu d'Helium.
 anotacio.llistat.esborrar.anotacions=Esborrar anotacions
+anotacio.llistat.esborrar.anotacions.title=Aquesta acció esborra d'Helium les anotacions seleccionades que no estiguin processades, rebutjades ni comunicades.
 anotacio.llistat.seleccionats.reintentats.success=S''han reintat les consultes correctament {0} de les {1} anotacions seleccionades
 anotacio.llistat.accio.massiva.no.seleccio=No hi ha cap anotació seleccionada
 anotacio.llistat.accio.massiva.info.reintentar.consulta.success=Tasca de reintentar consulta d'anotacions programada correctament
