Correccions 3.2.116 #1648 Publicació d'avisos (corregit missatge d'esborrat correcte)

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -83,7 +83,8 @@ avis.llistat.confirmacio.esborrar=Esteu segur que voleu esborrar aquest avís?
 avis.hora.minuts=hh:mm
 avis.avisNivell=Avís nivell
 avis.controller.creat=L'avís s'ha creat correctament
-avis.controller.modificat=L'avís s'ha creat modificat
+avis.controller.modificat=L'avís s'ha modificat correctament
+avis.controller.esborrat.ok=L'avís s'ha esborrat correctament
 avis.list.columna.activa=Actiu
 avis.boto.activar=Activar
 avis.boto.desactivar=Desactivar
