--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -2011,7 +2011,7 @@ anotacio.llistat.filtre.camp.estat=Estat
 anotacio.llistat.reintentar.consulta=Reintentar consulta
 anotacio.llistat.reintentar.consulta.title=Posa els intents a 0 de les anotacions que estiguin comunicades i no s'hagin pogut consultar durant els intents establerts.
 anotacio.llistat.reintentar.processament=Reintentar processament
-anotacio.llistat.reintentar.processament.title=Torna a processar les anotacions amb error de processament. Les anotacions pendents o rebutjades es torne a avaluar si hi ha cap tipus d'expedient que es pugui associar i en cas de tenir processament automàtic es duu a terme.
+anotacio.llistat.reintentar.processament.title=Torna a processar les anotacions amb error de processament. Les anotacions pendents o rebutjades es tornen a avaluar si hi ha cap tipus d'expedient que es pugui associar i en cas de tenir processament automàtic es duu a terme.
 anotacio.llistat.reintentar.mapeig=Reintentar mapeig
 anotacio.llistat.reintentar.mapeig.title=En el cas que l'anotació estigui associada a un expedient i en el tipus d'expedient estigui configurat el mapeig amb Sistra2 es torna a processar el mapeig de variables i documents.
 anotacio.llistat.reintentar.processament.nomes.annexos=Reintentar traspàs annexos
