#1658 Poder afegir un manual d'ajuda per tipus d'expedient

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -871,7 +871,7 @@ expedient.tipus.form.camp.restringirPerGrup=Restringir accés segons el grups de 
 expedient.tipus.form.camp.seleccionarAny=Permetre seleccionar any d'inici d'expedient
 expedient.tipus.form.camp.ambRetroaccio=Amb retroacció
 expedient.tipus.form.camp.reindexacioAsincrona=Reindexació asíncrona
-expedient.tipus.form.camp.manual.ajuda=Manual d''ajuda
+expedient.tipus.form.camp.manual.ajuda=Manual d'ajuda
 
 expedient.tipus.permis.titol=Permisos del tipus d'expedient
 expedient.tipus.permis.columna.principal=Principal
