#1596 Reconèixer documents firmats mapeig Sistra2 i evitar duplicitat
2a part per mostrar el document d'origen via referència

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -367,7 +367,7 @@ expedient.document.pipella.general=General
 expedient.document.pipella.nti=Metadades NTI
 expedient.document.info.etiqueta.notificat=NOT
 expedient.document.info.etiqueta.anotacio=AN
-expedient.document.info.etiqueta.anotacio.title=Document annex de l''anotació {0}
+expedient.document.info.etiqueta.anotacio.title=Document annex "{1}" de l''anotació {0}
 expedient.document.arxiu.error.uuidnoexistent=El document no té UUID d'Arxiu
 expedient.document.arxiu.error.uuidnoexistent.info=S'ha detectat que l'expedient està integrat a l'Arxiu però el document no té UUID d'Arxiu i per tant no està guardat a l'arxiu. Podeu provar d'incorporar-lo per guardar-lo a l'Arxiu.
 expedient.document.arxiu.migrar.arxiu=Acció per migrar el document cap a l'Arxiu i incorporar-lo a l'expedient.
@@ -773,12 +773,12 @@ expedient.anotacio.llistat.annexos.esborranys=L'anotació conté annexos en estat 
 expedient.anotacio.llistat.processant=L'anotació s'està processant automàticament.
 expedient.anotacio.llistat.processar.mapeig=Processar mapeig
 expedient.anotacio.llistat.processar.mapeig.title=Torna a aplicar el mapeig de Sistra2 de l'anotació cap a l'expedient.
-expedient.anotacio.llistat.processar.nomes.annexos=Processar traspàs annexos
-expedient.anotacio.llistat.processar.nomes.annexos.title=Torna a intentar moure els annexos entre expedients a l'Arxiu.
+expedient.anotacio.llistat.processar.traspas=Processar traspàs annexos (Arxiu)
+expedient.anotacio.llistat.processar.traspas.title=Torna a intentar moure els annexos entre expedients a l'Arxiu.
 expedient.anotacio.llistat.processar.mapeig.ok=L'anotació s'ha reprocessat correctament.
 expedient.anotacio.llistat.processar.mapeig.ko=No s'ha pogut reprocessar l'anotació.
-expedient.anotacio.llistat.processar.nomes.annexos.ko=No s'ha pogut reprocessar els annexos de l'anotació.
-expedient.anotacio.llistat.processar.nomes.annexos.ok=Els annexos de l'anotació s'han reprocessat correctament.
+expedient.anotacio.llistat.processar.traspas.ko=No s'ha pogut reprocessar els annexos de l'anotació.
+expedient.anotacio.llistat.processar.traspas.ok=Els annexos de l'anotació s'han reprocessat correctament.
 expedient.anotacio.llistat.processar.mapeig.permisos=L'usuari ha de tenir el permís de relacionar per reprocessar el mapeig a l'anotació.
 
 expedient.lucene.titol=Dades indexades a lucene per l''expedient {0}
@@ -2167,6 +2167,9 @@ anotacio.annex.detalls.camp.eni.tipus.documental=Tipus documental (ENI)
 anotacio.annex.detalls.camp.sicres.tipus.document=Tipus de document annexat
 anotacio.annex.detalls.camp.localitzacio=Localitzacio
 anotacio.annex.detalls.camp.observacions=Observacions
+anotacio.annex.detalls.camp.documents.expedient=Documents de l'expedient
+anotacio.annex.detalls.camp.documents.expedient.adjunt=Adjunt
+anotacio.annex.detalls.camp.documents.expedient.document=Document mapejat
 anotacio.annex.detalls.camp.firma=Firma
 anotacio.annex.detalls.camp.firmes=Firmes
 anotacio.annex.detalls.camp.firma.autoFirma=Firmat per RIPEA
