#1645 Incloure l'edició dels fluxos de firma a Helium (FASE 1)

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -1261,6 +1261,23 @@ expedient.tipus.document.form.camp.nti.estado.elaboracion=Estat d'elaboració
 expedient.tipus.document.form.camp.nti.estado.elaboracion.comentari=Si no s'especifica l'estat d'elaboració per defecte serà: Original
 expedient.tipus.document.form.camp.nti.tipo.documental=Tipus documental
 expedient.tipus.document.form.camp.nti.tipo.documental.comentari=Si no s'especifica el tipus documental per defecte serà: Altres
+expedient.tipus.document.form.camp.id.flux.firma=Id. flux de firma
+expedient.tipus.document.form.camp.id.flux.firma.buit=Seleccioni un flux de firma
+expedient.tipus.document.form.camp.portafirmes.carrecs=Càrrecs
+expedient.tipus.document.form.camp.portafirmes.flux=Definir flux de firma seleccionat
+expedient.tipus.document.form.camp.portafirmes.flux.mostrar=Mostrar flux de firma
+expedient.tipus.document.form.camp.portafirmes.flux.iniciar=Crear nou flux de firma
+expedient.tipus.document.form.camp.portafirmes.flux.editar=Editar flux de firma
+expedient.tipus.document.form.camp.portafirmes.flux.esborrar=Esborrar flux de firma
+expedient.tipus.document.form.camp.portafirmes.flux.esborrar.ok=El flux de firma s'ha esborrat correctament
+expedient.tipus.document.form.camp.portafirmes.flux.esborrar.ko=No s'ha pogut esborrar el flux de firma seleccionat
+expedient.tipus.document.form.camp.portafirmes.flux.esborrar.confirm=Estau segur que voleu esborrar aquesta plantilla de flux de firma?
+expedient.tipus.document.form.camp.portafirmes.flux.enum.INITIALIZING=S'ha rebut un estat inconsistent del procés de construcció del flux (Inialitzant). Consulti amb el seu administrador.
+expedient.tipus.document.form.camp.portafirmes.flux.enum.IN_PROGRESS=S'ha rebut un estat inconsistent de construcció del flux (En Progrés). Consulti amb el seu administrador.
+expedient.tipus.document.form.camp.portafirmes.flux.enum.CANCELLED=L'usuari ha cancel·lat la construcció del flux.
+expedient.tipus.document.form.camp.portafirmes.flux.enum.FINAL_ERROR=Error durant la construcció del flux. Consulti amb el seu administrador.
+expedient.tipus.document.form.camp.portafirmes.flux.enum.FINAL_OK=El procés de creació del flux ha finalizat correctament.
+expedient.tipus.document.form.camp.portafirmes.flux.edicio.enum.FINAL_OK=L'edició del flux de firma ha finalizat correctament.
 
 #expedient.tipus.document.validacio.codi.repetit=Aquest codi ja existeix
 expedient.tipus.document.controller.creat=El document s'ha creat correctament
