#1677 Mostrar el motiu de rebuig de les anotacions

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -2096,6 +2096,7 @@ anotacio.llistat.accio.reintentarConsulta.error=Error fixant el número d''intent
 
 anotacio.detalls.titol=Detalls de l''anotació de registre {0}
 anotacio.detalls.errorProcessament=Error en el processament de l''anotació: {0} 
+anotacio.detalls.rebuigMotiu=Motiu del rebuig de l'anotació: 
 anotacio.detalls.consulta=L''anotació està pendent de ser consultada abans de poder-se processar. Intent {0} de {1}
 anotacio.detalls.pipella.informacio=Informació
 anotacio.detalls.pipella.interessats=Interessats
