--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -776,7 +776,7 @@ expedient.anotacio.llistat.processar.mapeig.title=Torna a aplicar el mapeig de S
 expedient.anotacio.llistat.processar.traspas=Processar traspàs annexos (Arxiu)
 expedient.anotacio.llistat.processar.traspas.title=Torna a intentar moure els annexos entre expedients a l'Arxiu.
 expedient.anotacio.llistat.processar.mapeig.ok=L'anotació s'ha reprocessat correctament.
-expedient.anotacio.llistat.processar.mapeig.ko=No s'ha pogut reprocessar l'anotació.
+expedient.anotacio.llistat.processar.mapeig.ko=No s''ha pogut reprocessar l''anotació: {0}
 expedient.anotacio.llistat.processar.traspas.ko=No s'ha pogut reprocessar els annexos de l'anotació.
 expedient.anotacio.llistat.processar.traspas.ok=Els annexos de l'anotació s'han reprocessat correctament.
 expedient.anotacio.llistat.processar.mapeig.permisos=L'usuari ha de tenir el permís de relacionar per reprocessar el mapeig a l'anotació.
