#1645 Incloure l'edició dels fluxos de firma a Helium FASE 2

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -96,6 +96,7 @@ expedient.document.arxiu=Arxiu
 expedient.document.data=Data
 expedient.document.modificar=Modificar document
 expedient.document.firmaPassarela=Firmar amb passarel·la web
+expedient.document.enviar.portasignatures=Enviar a firmar al portasignatures
 expedient.document.notificar=Notificar document
 expedient.document.descarregar=Descarregar document
 expedient.document.adjunt=Document adjunt
