--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -443,6 +443,15 @@ expedient.document.firmaPassarela.camp.motiu.default=Tramitació de l''expedient 
 expedient.document.firmaPassarela.boto.firmar=Iniciar procés de firma
 expedient.document.firmaPassarela.validacio.custodia.codi=Es cancel·la la firma perquè no es podrà guardar el document firmat si el document no té codi de Custòdia ni integració amb l'Arxiu digital.
 
+expedient.document.enviar.portasignatures.titol.adjunt=Enviar al portasignatures el document adjunt "{0}"
+expedient.document.enviar.portasignatures.titol.document=Enviar al portasignatures el document "{0}"
+expedient.document.enviar.portasignatures.boto.enviar.portasignatures=Enviar al portasignatures
+expedient.document.enviar.portasignatures.camp.motiu=Motiu
+expedient.document.enviar.portasignatures.camp.prioritat=Prioritat
+expedient.document.enviar.portasignatures.camp.annexos=Annexos
+expedient.document.enviar.portasignatures.camp.annexos.placeholder=Annexos enviats juntament amb el document
+expedient.document.enviar.portasignatures.camp.definir.fluxdefirma=Definir flux de firma
+
 notificacio.form.camp.data.programada.comment=Data en que es farà efectiu l'enviament de la notificació a Notific@
 notificacio.form.camp.data.caducitat.comment=El valor mínim és un dia després de l'enviament.
 notificacio.form.camp.retard.comment=Dies que la notificació romandrà a la seu abans de ser enviada via DEH o correu postal
