#1645 Incloure l'edició dels fluxos de firma a Helium - FASE 2

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -446,11 +446,19 @@ expedient.document.firmaPassarela.validacio.custodia.codi=Es cancel·la la firma 
 expedient.document.enviar.portasignatures.titol.adjunt=Enviar al portasignatures el document adjunt "{0}"
 expedient.document.enviar.portasignatures.titol.document=Enviar al portasignatures el document "{0}"
 expedient.document.enviar.portasignatures.boto.enviar.portasignatures=Enviar al portasignatures
+expedient.document.enviar.portasignatures.error=Hi ha hagut un error a l'enviar al portasignatures
+expedient.document.enviar.portasignatures.ok=El document s'ha enviat al portasignatures
 expedient.document.enviar.portasignatures.camp.motiu=Motiu
 expedient.document.enviar.portasignatures.camp.prioritat=Prioritat
 expedient.document.enviar.portasignatures.camp.annexos=Annexos
 expedient.document.enviar.portasignatures.camp.annexos.placeholder=Annexos enviats juntament amb el document
 expedient.document.enviar.portasignatures.camp.definir.fluxdefirma=Definir flux de firma
+expedient.document.pendent.portasignatures.titol=Document pendent del portasignatures
+expedient.document.portasignatures.cancelar.enviament=Cancel·lar enviament
+expedient.document.portasignatures.enviament.cancelat=L'enviament al portasignatures s'ha cancel·lat correctament
+expedient.document.portasignatures.enviament.cancelat.error=Hi ha hagut un error al cancel·lar l'enviament al portasignatures
+expedient.document.portasignatures.enviament.reprocessar.ok=El document s'ha tornat a enviar al portasignatures
+expedient.document.portasignatures.enviament.reprocessar.error=Hi ha hagut un error a l'enviar al portasignatures
 
 notificacio.form.camp.data.programada.comment=Data en que es farà efectiu l'enviament de la notificació a Notific@
 notificacio.form.camp.data.caducitat.comment=El valor mínim és un dia després de l'enviament.
@@ -1264,12 +1272,16 @@ expedient.tipus.document.form.camp.tipus_doc.comment=Codi del document pel porta
 expedient.tipus.document.form.camp.ignored=No retrocedir valor
 expedient.tipus.document.form.camp.ignored.comment=No esborrar el document en cas de retrocedir l'expedient
 expedient.tipus.document.form.legend.metadades.nti=Metadades NTI per defecte
+expedient.tipus.document.form.legend.enviament.portasignatures=Enviament al portasignatures
 expedient.tipus.document.form.camp.nti.origen=Orígen
 expedient.tipus.document.form.camp.nti.origen.comentari=Si no s'especifica l'origen serà: Administració
 expedient.tipus.document.form.camp.nti.estado.elaboracion=Estat d'elaboració
 expedient.tipus.document.form.camp.nti.estado.elaboracion.comentari=Si no s'especifica l'estat d'elaboració per defecte serà: Original
 expedient.tipus.document.form.camp.nti.tipo.documental=Tipus documental
 expedient.tipus.document.form.camp.nti.tipo.documental.comentari=Si no s'especifica el tipus documental per defecte serà: Altres
+expedient.tipus.document.form.camp.portafirmes.actiu=Enviar des de la gestió de documents
+expedient.tipus.document.form.camp.portafirmes.flux.tipus=Tipus de firma
+expedient.tipus.document.form.camp.portafirmes.sequencia.firma=Seqüència de firma
 expedient.tipus.document.form.camp.id.flux.firma=Id. flux de firma
 expedient.tipus.document.form.camp.id.flux.firma.buit=Seleccioni un flux de firma
 expedient.tipus.document.form.camp.portafirmes.carrecs=Càrrecs
@@ -1287,6 +1299,11 @@ expedient.tipus.document.form.camp.portafirmes.flux.enum.CANCELLED=L'usuari ha c
 expedient.tipus.document.form.camp.portafirmes.flux.enum.FINAL_ERROR=Error durant la construcció del flux. Consulti amb el seu administrador.
 expedient.tipus.document.form.camp.portafirmes.flux.enum.FINAL_OK=El procés de creació del flux ha finalizat correctament.
 expedient.tipus.document.form.camp.portafirmes.flux.edicio.enum.FINAL_OK=L'edició del flux de firma ha finalizat correctament.
+expedient.tipus.document.form.camp.portafirmes.tipus.buit=No s'ha seleccionat el Tipus de firma
+expedient.tipus.document.form.camp.portafirmes.flux.id.buit=No s'ha informat l'Id del flux de firma
+expedient.tipus.document.form.camp.portafirmes.responsables.buit=Seleccioni els Responsables
+
+
 
 #expedient.tipus.document.validacio.codi.repetit=Aquest codi ja existeix
 expedient.tipus.document.controller.creat=El document s'ha creat correctament
@@ -2380,6 +2397,18 @@ enum.null =
 
 enum.document.tipus.firma.ADJUNT=Adjunta
 enum.document.tipus.firma.SEPARAT=Separada
+
+enum.document.tipus.portafirmes.SIMPLE=Simple
+enum.document.tipus.portafirmes.FLUX=Flux
+
+enum.document.tipus.portafirmes.sequencia.SERIE=Sèrie
+enum.document.tipus.portafirmes.sequencia.PARALEL=Paral·lel
+
+enum.document.tipus.portafirmes.prioritat.MOLT_ALTA=Molt alta
+enum.document.tipus.portafirmes.prioritat.ALTA=Alta
+enum.document.tipus.portafirmes.prioritat.NORMAL=Normal
+enum.document.tipus.portafirmes.prioritat.BAIXA=Baixa
+enum.document.tipus.portafirmes.prioritat.MOLT_BAIXA=Molt baixa
 
 enum.idioma.CA=Català
 enum.idioma.ES=Castellà
