--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -1525,6 +1525,7 @@ expedient.tipus.integracio.distribucio.procesAuto=Processament automàtic
 expedient.tipus.integracio.distribucio.procesAuto.comment=Indica si processar automàticament les anotacions associades amb el tipus d'expedient o l'expedient amb el mateix número.
 expedient.tipus.integracio.distribucio.sistra=Aplicar mapeig amb SISTRA2
 expedient.tipus.integracio.distribucio.sistra.comment=Indica si aplicar el mapeig de documents i variables de la integració amb SISTRA2 sobre els documents annexos de les anotacions de Distribucio entrants en el moment del processament. Els annexos no mapejats no s'incorporaran a l'expedient
+expedient.tipus.integracio.distribucio.presencial=Presencial
 
 
 expedient.tipus.integracio.notificacio.organCodi=Codi d'òrgan
