Tancament i correccions Helium 3.2.116.2 (2023.08.22 13:00)

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -1575,8 +1575,8 @@ expedient.tipus.integracio.pinbal.pinbalNifCif = NIF/CIF de la Unitat Organitzat
 
 expedient.tipus.integracio.distribucio.validacio = Errors de validació
 expedient.tipus.integracio.distribucio.regla.unitatOrganica.error=No s'ha trobat la unitat orgànica arrel a les metadades NTI d'aquest tipus d'expedient
-expedient.tipus.integracio.distribucio.regla.crearActualitar.success=Cració/Actualitzarció de la regla amb codi de procediment {0} finalitzada correctament amb resposta de Distribucio : {1}
-expedient.tipus.integracio.distribucio.regla.crearActualitar.error=Error al crear la regla a Distribucio: {0}
+expedient.tipus.integracio.distribucio.regla.crearActualitzar.success=Cració/Actualitzarció de la regla amb codi de procediment {0} finalitzada correctament amb resposta de Distribucio : {1}
+expedient.tipus.integracio.distribucio.regla.crearActualitzar.error=Error al crear la regla a Distribucio: {0}
 expedient.tipus.integracio.distribucio.regla.consulta.error=Error consultant la regla a Distribucio: {0}
 expedient.tipus.integracio.distribucio.regla.consulta.success=Regla consultada correctament a Distribucio: {0}
 expedient.tipus.integracio.distribucio.regla.canviEstat.success=Petició de canvi d''estat de la regla amb codi de procediment {0} finalitzada correctament amb resposta de Distribucio : {1}
