--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -1297,11 +1297,21 @@ expedient.tipus.document.form.camp.portafirmes.flux.enum.INITIALIZING=S'ha rebut
 expedient.tipus.document.form.camp.portafirmes.flux.enum.IN_PROGRESS=S'ha rebut un estat inconsistent de construcció del flux (En Progrés). Consulti amb el seu administrador.
 expedient.tipus.document.form.camp.portafirmes.flux.enum.CANCELLED=L'usuari ha cancel·lat la construcció del flux.
 expedient.tipus.document.form.camp.portafirmes.flux.enum.FINAL_ERROR=Error durant la construcció del flux. Consulti amb el seu administrador.
+
+expedient.tipus.document.form.camp.portafirmes.flux.enum.INITIALIZING=S'ha rebut un estat inconsistent del procés de construcció del flux (Inialitzant). Consulti amb el seu administrador.
+expedient.tipus.document.form.camp.portafirmes.flux.enum.IN_PROGRESS=S'ha rebut un estat inconsistent de construcció del flux (En Progrés). Consulti amb el seu administrador.
+expedient.tipus.document.form.camp.portafirmes.flux.enum.CANCELLED=L'usuari ha cancel·lat la construcció del flux.
+expedient.tipus.document.form.camp.portafirmes.flux.enum.FINAL_ERROR=Error durant la construcció del flux. Consulti amb el seu administrador.
 expedient.tipus.document.form.camp.portafirmes.flux.enum.FINAL_OK=El procés de creació del flux ha finalizat correctament.
+expedient.tipus.document.form.camp.portafirmes.flux.edicio.enum.FINAL_OK=L'edició del flux de firma ha finalizat correctament.
+
+expedient.tipus.document.form.camp.portafirmes.flux.enum.FINAL_OK=El procés de creació del flux ha finalizat correctament.
+
 expedient.tipus.document.form.camp.portafirmes.flux.edicio.enum.FINAL_OK=L'edició del flux de firma ha finalizat correctament.
 expedient.tipus.document.form.camp.portafirmes.tipus.buit=No s'ha seleccionat el Tipus de firma
 expedient.tipus.document.form.camp.portafirmes.flux.id.buit=No s'ha informat l'Id del flux de firma
 expedient.tipus.document.form.camp.portafirmes.responsables.buit=Seleccioni els Responsables
+expedient.tipus.document.form.camp.portafirmes.flux.seleccionat=Flux de firma seleccionat: 
 
 
 
