#1656 Permetre notificar més d'un document i a la vegada en un .zip _ part 1

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -2044,6 +2044,7 @@ expedient.boto.nova_dada=Nova dada
 expedient.boto.veure_errors=Veure errors
 expedient.boto.veure_alertes=Veure alertes
 expedient.boto.veure_dades=Veure dades
+expedient.boto.notificar_zip=Notificar
 
 expedient.nova.data.nova=Nova variable
 expedient.nova.data.no.definida=Variable no definida
