#1645 Incloure l'edició dels fluxos de firma a Helium

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -902,6 +902,7 @@ common.icones.doc.psigna.estat=Estat
 common.icones.doc.psigna.motiu.rebuig=Motiu de rebuig
 common.icones.doc.psigna.data.proces.primer=Data resposta portasignatures
 common.icones.doc.psigna.data.proces.darrer=Data darrer intent de processar
+common.icones.doc.psigna.node.flux=Node en el flux
 common.icones.doc.psigna.error.processant=Error al processar
 common.icones.doc.psigna.reintentar=Tornar a processar el document
 
