--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -453,12 +453,23 @@ expedient.document.enviar.portasignatures.camp.prioritat=Prioritat
 expedient.document.enviar.portasignatures.camp.annexos=Annexos
 expedient.document.enviar.portasignatures.camp.annexos.placeholder=Annexos enviats juntament amb el document
 expedient.document.enviar.portasignatures.camp.definir.fluxdefirma=Definir flux de firma
+expedient.document.enviar.portasignatures.camp.flux.definit.comentari=Existeix un flux de firma predefinit. La creació d'un nou flux implica sobreescriure el que està definit per defecte.
+expedient.document.enviar.portasignatures.camp.flux.seleccionat=Flux de firma seleccionat: 
+expedient.document.enviar.portasignatures.camp.flux.show=Mostrar flux predefinit
+expedient.document.enviar.portasignatures.camp.flux.hide=Amagar flux predefinit
+expedient.document.enviar.portasignatures.camp.responsables=Responsables
+expedient.document.enviar.portasignatures.camp.carrecs.info=Carrega i mostra els càrrecs disponibles al Portasignatures per incloure'ls al flux de firmes.
+expedient.document.enviar.portasignatures.camp.carrecs.placeholder=Seleccionar càrrec per afegir-lo al flux
+
+
 expedient.document.pendent.portasignatures.titol=Document pendent del portasignatures
 expedient.document.portasignatures.cancelar.enviament=Cancel·lar enviament
 expedient.document.portasignatures.enviament.cancelat=L'enviament al portasignatures s'ha cancel·lat correctament
 expedient.document.portasignatures.enviament.cancelat.error=Hi ha hagut un error al cancel·lar l'enviament al portasignatures
 expedient.document.portasignatures.enviament.reprocessar.ok=El document s'ha tornat a enviar al portasignatures
 expedient.document.portasignatures.enviament.reprocessar.error=Hi ha hagut un error a l'enviar al portasignatures
+
+
 
 notificacio.form.camp.data.programada.comment=Data en que es farà efectiu l'enviament de la notificació a Notific@
 notificacio.form.camp.data.caducitat.comment=El valor mínim és un dia després de l'enviament.
@@ -1280,7 +1291,9 @@ expedient.tipus.document.form.camp.nti.estado.elaboracion.comentari=Si no s'espe
 expedient.tipus.document.form.camp.nti.tipo.documental=Tipus documental
 expedient.tipus.document.form.camp.nti.tipo.documental.comentari=Si no s'especifica el tipus documental per defecte serà: Altres
 expedient.tipus.document.form.camp.portafirmes.actiu=Enviar des de la gestió de documents
+expedient.tipus.document.form.camp.portafirmes.actiu.info=Indica si permet o no enviar individualemnt el document des de la gestió de documents. El document ha de tenir configurat el tipus de firma per defecte.
 expedient.tipus.document.form.camp.portafirmes.flux.tipus=Tipus de firma
+expedient.tipus.document.form.camp.portafirmes.flux.tipus.info=Permet escollir i fefinir un tipus de firma per defecte pel document de tipus flux o seleccionant els destinataris. Si es defineix un tipus de firma llavors aquest tindrà preferència sobre els valors indicats en les passes i destinataris en la crida al handler d'enviar al Portafirmes.
 expedient.tipus.document.form.camp.portafirmes.sequencia.firma=Seqüència de firma
 expedient.tipus.document.form.camp.id.flux.firma=Id. flux de firma
 expedient.tipus.document.form.camp.id.flux.firma.buit=Seleccioni un flux de firma
@@ -1308,7 +1321,7 @@ expedient.tipus.document.form.camp.portafirmes.flux.edicio.enum.FINAL_OK=L'edici
 expedient.tipus.document.form.camp.portafirmes.flux.enum.FINAL_OK=El procés de creació del flux ha finalizat correctament.
 
 expedient.tipus.document.form.camp.portafirmes.flux.edicio.enum.FINAL_OK=L'edició del flux de firma ha finalizat correctament.
-expedient.tipus.document.form.camp.portafirmes.tipus.buit=No s'ha seleccionat el Tipus de firma
+expedient.tipus.document.form.camp.portafirmes.tipus.buit=No s'ha seleccionat el Tipus de firma, és necessari si s'escull l'opció d'enviar des de la gestió de documents.
 expedient.tipus.document.form.camp.portafirmes.flux.id.buit=No s'ha informat l'Id del flux de firma
 expedient.tipus.document.form.camp.portafirmes.responsables.buit=Seleccioni els Responsables
 expedient.tipus.document.form.camp.portafirmes.flux.seleccionat=Flux de firma seleccionat: 
