#1656 Permetre notificar més d'un document i a la vegada en un .zip (correccions)

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -686,6 +686,7 @@ info.reassignacio.produit=La reassignació s'ha produït correctament
 info.reassignacio.cancelat=La reassignació s'ha cancel·lat correctament
 
 info.signatura.doc.processat=La signatura del document s'ha processat correctament
+info.signatura.doc.processat.error=S''ha produït un error processant la signatura del document
 
 info.mapeigSistra.esborrat=El mapeig s´ha esborrat correctament
 
