#1656 Permetre notificar més d'un document i a la vegada en un .zip
Correccions:
- Guardar el document firmat correctament
- Mostrar NOT en tots els documents
- Obrir modal per veure les notificacions de cada document

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -366,6 +366,7 @@ expedient.document.data=Data
 expedient.document.pipella.general=General
 expedient.document.pipella.nti=Metadades NTI
 expedient.document.info.etiqueta.notificat=NOT
+expedient.document.info.etiqueta.notificat.title=Notificacions del document
 expedient.document.info.etiqueta.anotacio=AN
 expedient.document.info.etiqueta.anotacio.title=Document annex "{1}" de l''anotació {0}
 expedient.document.arxiu.error.uuidnoexistent=El document no té UUID d'Arxiu
@@ -770,6 +771,9 @@ expedient.notificacio.reprocessada=S'ha tornat a demanar el justificant
 expedient.notificacio.concepte=Concepte
 expedient.notificacio.titular=Titular
 expedient.notificacio.destinatari=Representant
+
+expedient.document.notificacions.titol.document=Notificacions del document "{0}"
+expedient.document.notificacions.titol.adjunt=Notificacions d''adjunt "{0}"
 
 
 expedient.tasca.columna.tasca=Tasca
