#1691 Canviar a l'API REST del Notib versió 2

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -249,6 +249,8 @@ notificacio.enviament.estat.enum.REBUTJADA=Rebutjada
 notificacio.enviament.estat.enum.SENSE_INFORMACIO=Sense informació
 notificacio.enviament.estat.enum.ANULADA=Notificació incorrecta o errònia
 notificacio.enviament.estat.enum.ENVIAT_SIR=Enviada
+notificacio.enviament.estat.enum.ENVIADA_AMB_ERRORS=Enviada amb errors
+notificacio.enviament.estat.enum.FINALITZADA_AMB_ERRORS=Finalitzada amb errors
 
 alerta.llistat.marcar_com_llegida=Marcar llegida
 alerta.llistat.marcar_no_llegida=Desmarcar llegida
