--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -408,6 +408,9 @@ expedient.document.camp.firma.responsable.nif=Nif del responsable
 expedient.document.camp.firma.responsable.data=Data de la signatura
 expedient.document.camp.firma.emissor.certificat=Emissor del certificat
 
+expedient.document.firmat.esborrar.confirmacio=El document que es vol esborrar està firmat i està arxivat com a document definitiu. Si continua amb l'acció el document s'esborrarà de l'expedient de HELIUM però seguirà emmagatzemat a dins l'arxiu. Estau segur que voleu continuar?
+
+
 expedient.document.detall.consulta.error=Error no controlat consultant el detall del document: {0}
 expedient.document.detall.pipella.registre=Registre
 expedient.document.detall.pipella.signatura=Signatura
