#1708 Actualitzar el manual de disseny amb els canvis d'Helium sense WF
- Afegir part de notificació múltiple
- Afegir opcions per definir flux de firmes

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -1448,7 +1448,7 @@ expedient.tipus.document.form.camp.nti.estado.elaboracion.comentari=Si no s'espe
 expedient.tipus.document.form.camp.nti.tipo.documental=Tipus documental
 expedient.tipus.document.form.camp.nti.tipo.documental.comentari=Si no s'especifica el tipus documental per defecte serà: Altres
 expedient.tipus.document.form.camp.portafirmes.actiu=Enviar des de la gestió de documents
-expedient.tipus.document.form.camp.portafirmes.actiu.info=Indica si permet o no enviar individualemnt el document des de la gestió de documents. El document ha de tenir configurat el tipus de firma per defecte.
+expedient.tipus.document.form.camp.portafirmes.actiu.info=Indica si permet o no enviar individualment el document des de la gestió de documents. El document ha de tenir configurat el tipus de firma per defecte.
 expedient.tipus.document.form.camp.portafirmes.flux.tipus=Tipus de firma
 expedient.tipus.document.form.camp.portafirmes.flux.tipus.info=Permet escollir i fefinir un tipus de firma per defecte pel document de tipus flux o seleccionant els destinataris. Si es defineix un tipus de firma llavors aquest tindrà preferència sobre els valors indicats en les passes i destinataris en la crida al handler d'enviar al Portafirmes.
 expedient.tipus.document.form.camp.portafirmes.sequencia.firma=Seqüència de firma
