#1627 HELIUM sense motor de WF
- Corregir accions i afegir tipus acció

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -1107,7 +1107,8 @@ expedient.tipus.taula.estadistica.warning.senseresultats=No s'han trobat resulta
 expedient.tipus.tipus.enum.FLOW=Per flux
 expedient.tipus.tipus.enum.ESTAT= Per estats
 
-accio.tipus.enum.HANDLER=Handler
+accio.tipus.enum.ACCIO=Acció
+accio.tipus.enum.HANDLER_PROPI=Handler propi
 accio.tipus.enum.HANDLER_PREDEFINIT=Handler predefinit
 accio.tipus.enum.SCRIPT=Script
 
@@ -1541,8 +1542,8 @@ expedient.tipus.accio.controller.modificat=La acció s'ha modificat correctament
 expedient.tipus.accio.controller.eliminat=La acció s'ha elimitat correctament
 expedient.tipus.accio.validacio = Errors de validació
 expedient.tipus.accio.validacio.accio.no.existeix=L''acció no existeix a la darrera versió de la definició de procés
-expedient.tipus.accio.validacio.predefinit.classe.no.existeix=La classe {0} no es troba entre els handlers predefinits
-expedient.tipus.accio.validacio.predefinit.parametres.obligatoris=El handler té els següents paràmetres obligatoris que no han estat informats: {0}
+expedient.tipus.accio.validacio.handler.classe.no.existeix=La classe {0} no es troba entre els handlers predefinits
+expedient.tipus.accio.validacio.handler.parametres.obligatoris=El handler té els següents paràmetres obligatoris que no han estat informats: {0}
 
 expedient.tipus.accio.desplegar.form.titol=Desplegament de handlers .jar dins el tipus d''expedient "{0} - {1}"
 expedient.tipus.accio.desplegar.flow=El tipus d'expedient no és per estats.
