#1627 HELIUM sense motor de WF
- Corregir part edició variable

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -1528,7 +1528,8 @@ expedient.tipus.accio.form.accio.rols=Restringir als rols
 expedient.tipus.accio.form.accio.descripcio=Descripció
 expedient.tipus.accio.form.accio.defprocJbpmKey=Definició de procés
 expedient.tipus.accio.form.accio.defprocJbpmKey.placeholder=Seleccioni la definició de procés que conté el handler
-expedient.tipus.accio.form.accio.jbpmAction=Handler
+expedient.tipus.accio.form.accio.jbpmAction=Acció
+expedient.tipus.accio.form.accio.handlerPropi=Handler propi
 expedient.tipus.accio.form.accio.script=Script
 expedient.tipus.accio.form.legend.handler.predefinit=Mapejos del handler
 expedient.tipus.accio.form.accio.handlerPredefinit=Handler predefinit
