#1713 Error guardant document firmat. Canvi versió plugin validació
- Treure dependència plugins-api-1.0
- Arreglar firma per passarel·la web

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -2835,7 +2835,8 @@ document.controller.firma.passarela.final.cancel=La firma del document ha estat 
 document.controller.firma.passarela.final.ok=La firma del document ha finalitzat correctament
 document.controller.firma.passarela.final.ok.nofile=La firma del document ha finalitzat correctament però no ha retornat cap document
 document.controller.firma.passarela.final.ok.statuserr=La firma del document ha finalitzat correctament però l''estat del document no és l''esperat: {0} - {1}
-document.controller.firma.passarela.final.error=La firma del document ha produit el seguent error: {0} {1}
+document.controller.firma.passarela.final.error=La firma del document ha produit el seguent error: {0}
+document.controller.firma.passarela.final.warning=La firma del document ha produit el seguent avís: {0}
 document.controller.firma.passarela.final.error.validacio=La firma del document ha produit un error al validar i custodiar: {0} 
 document.controller.firma.passarela.final.cancel=La firma del document ha estat cancel·lada
 document.controller.firma.passarela.final.desconegut=La firma del document ha finalitzat amb estat desconegut
