Correccions Helium sense WF #1627:
- Gestionar les dades d'un expedient corregir missatge de confirmació
d'eliminar dades.
- Tipus d'expedient corregir missatge d'esborrar una regla d'un estat.
- Corregir nullpointer en enviar a portasignatures en cas d'enviar un
document sense flux.
- Corregir pantalla d'error mal formada en el cas d'error en enviar a
portasignatures.
- No s'ha de poder afegir documents si el user no té permís de gestió de
documents.
- No mostrar botó enviar a portasignatures si el document no té el check
d'enviar des de la gestió de documents.
- No mostrar botons esborrar i modificar document si no té permís de
gestió documents.

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -361,6 +361,7 @@ expedient.llistat.exportacio.error=S''ha produït un error al generar el fitxer a
 expedient.llistat.consulta_avanzada=Consulta avançada
 
 expedient.llistat.document.confirm_esborrar=Estau segur que voleu esborrar aquest document?
+expedient.llistat.dada.confirm_esborrar=Estau segur que voleu esborrar aquesta dada?
 
 expedient.document.no_disponible=Document no disponible
 expedient.document.signat=Document signat
@@ -486,7 +487,7 @@ expedient.document.firmaPassarela.validacio.custodia.codi=Es cancel·la la firma 
 expedient.document.enviar.portasignatures.titol.adjunt=Enviar al portasignatures el document adjunt "{0}"
 expedient.document.enviar.portasignatures.titol.document=Enviar al portasignatures el document "{0}"
 expedient.document.enviar.portasignatures.boto.enviar.portasignatures=Enviar al portasignatures
-expedient.document.enviar.portasignatures.error=Hi ha hagut un error a l'enviar al portasignatures
+expedient.document.enviar.portasignatures.error=Hi ha hagut un error a l''enviar al portasignatures
 expedient.document.enviar.portasignatures.ok=El document s'ha enviat al portasignatures
 expedient.document.enviar.portasignatures.camp.motiu=Motiu
 expedient.document.enviar.portasignatures.camp.prioritat=Prioritat
@@ -995,6 +996,7 @@ expedient.tipus.permis.form.camp.principal=Principal
 
 expedient.tipus.regla.titol=Regles de l'estat
 expedient.tipus.regla.accio.nou=Nova regla
+expedient.tipus.regla.confirmacio.esborrar=Estau segur que voleu esborrar aquesta regla?
 expedient.tipus.regla.form.camp.nom=Nom
 expedient.tipus.regla.form.camp.qui=Qui
 expedient.tipus.regla.form.camp.qui.valors=Valors qui
